# Hand2Body

./: .gitattributes  .gitignore  README.md  pyproject.toml
assets/urdf/: ball.urdf  g1_29dof_rev_1_0_pingpong.urdf  table.urdf
configs/: default.yaml
docs/: CONTRACT.md  results.md  stage3_runbook.md
h2b/: __init__.py  inference.py  losses.py  training.py
h2b/data/: arctic_loader.py  dataset.py  pkl_loader.py  smpl_fk.py
h2b/export/: aitviewer_vis.py
h2b/models/: diffusion.py  fk_torch.py  streaming.py
h2b/representations/: frames.py
h2wb/: __init__.py  inference.py  losses.py  training.py
h2wb/data/: cache.py  dataset.py  pkl_loader.py  smpl_fk.py
h2wb/export/: aitviewer_vis.py  to_amass_npz.py  visualize.py
h2wb/models/: __init__.py  diffmlp.py  regressor.py  streaming.py
h2wb/representations/: frames.py  rotations.py
scripts/: cache_pairs.py  compare_models.py  extract_amass.py  generate.py  inspect_pkl.py  render_aitviewer.py  render_video.py  setup_env.ps1  shape_probe.py  threeway_export.py  train.py
tests/: test_cache.py  test_dataset.py  test_export.py  test_footlock.py  test_frames.py  test_m4.py  test_m5.py  test_model_smoke.py  test_pkl_loader.py  test_rotations.py  test_shape_probe.py  test_smpl_fk.py  test_two_wrist.py
